--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.21.2",
     "mongoose": "^5.7.11",
     "serverless-http": "^2.3.0"
+    "minimist": ">=1.2.3"
   },
   "devDependencies": {
     "serverless-offline": "^5.12.0"
