Fixes npm install error on package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mongoose": "^5.7.11",
-    "serverless-http": "^2.3.0"
+    "serverless-http": "^2.3.0",
     "minimist": ">=1.2.3"
   },
   "devDependencies": {
